// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-form-field-time-zone-picker #render error should render component as expected 1`] = `
<gux-form-field-time-zone-picker>
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Select Time Zone This is an error message
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <slot name="label-info"></slot>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-input-error gux-time-zone-picker-container">
          <slot></slot>
        </div>
        <div class="gux-form-field-error gux-show">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-time-zone-picker-beta aria-describedby="gux-form-field-error-i" id="gux-form-field-input-i" local-default="America/Detroit" value="Etc/GMT+1" workspace-default="Etc/GMT"></gux-time-zone-picker-beta>
  <label for="gux-form-field-input-i" slot="label">
    Select Time Zone
  </label>
  <span id="gux-form-field-error-i" slot="error">
    This is an error message
  </span>
</gux-form-field-time-zone-picker>
`;

exports[`gux-form-field-time-zone-picker #render help should render component as expected 1`] = `
<gux-form-field-time-zone-picker>
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Select Time Zone
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <slot name="label-info"></slot>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-time-zone-picker-container">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help gux-show">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-time-zone-picker-beta aria-describedby="gux-form-field-help-i" id="gux-form-field-input-i" local-default="America/Detroit" value="Etc/GMT+1" workspace-default="Etc/GMT"></gux-time-zone-picker-beta>
  <label for="gux-form-field-input-i" slot="label">
    Select Time Zone
  </label>
  <span id="gux-form-field-help-i" slot="help">
    This is a help message
  </span>
</gux-form-field-time-zone-picker>
`;

exports[`gux-form-field-time-zone-picker #render indicator marks should render component as expected (1) 1`] = `
<gux-form-field-time-zone-picker>
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Select Time Zone
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <slot name="label-info"></slot>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-time-zone-picker-container">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-time-zone-picker-beta id="gux-form-field-input-i" local-default="America/Detroit" value="Etc/GMT+1" workspace-default="Etc/GMT"></gux-time-zone-picker-beta>
  <label for="gux-form-field-input-i" slot="label">
    Select Time Zone
  </label>
</gux-form-field-time-zone-picker>
`;

exports[`gux-form-field-time-zone-picker #render indicator marks should render component as expected (2) 1`] = `
<gux-form-field-time-zone-picker indicator-mark="optional">
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Select Time Zone
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="optional"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <slot name="label-info"></slot>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-time-zone-picker-container">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-time-zone-picker-beta id="gux-form-field-input-i" local-default="America/Detroit" value="Etc/GMT+1" workspace-default="Etc/GMT"></gux-time-zone-picker-beta>
  <label for="gux-form-field-input-i" slot="label">
    Select Time Zone
  </label>
</gux-form-field-time-zone-picker>
`;

exports[`gux-form-field-time-zone-picker #render indicator marks should render component as expected (3) 1`] = `
<gux-form-field-time-zone-picker indicator-mark="required">
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Select Time Zone
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <slot name="label-info"></slot>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-time-zone-picker-container">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-time-zone-picker-beta id="gux-form-field-input-i" local-default="America/Detroit" value="Etc/GMT+1" workspace-default="Etc/GMT"></gux-time-zone-picker-beta>
  <label for="gux-form-field-input-i" slot="label">
    Select Time Zone
  </label>
</gux-form-field-time-zone-picker>
`;

exports[`gux-form-field-time-zone-picker #render input attributes should render component as expected (1) 1`] = `
<gux-form-field-time-zone-picker>
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Select Time Zone
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <slot name="label-info"></slot>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-time-zone-picker-container">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-time-zone-picker-beta id="gux-form-field-input-i" local-default="America/Detroit" value="Etc/GMT+1" workspace-default="Etc/GMT"></gux-time-zone-picker-beta>
  <label for="gux-form-field-input-i" slot="label">
    Select Time Zone
  </label>
</gux-form-field-time-zone-picker>
`;

exports[`gux-form-field-time-zone-picker #render input attributes should render component as expected (2) 1`] = `
<gux-form-field-time-zone-picker>
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Select Time Zone
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <slot name="label-info"></slot>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-time-zone-picker-container">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-time-zone-picker-beta disabled="" id="gux-form-field-input-i" local-default="America/Detroit" value="Etc/GMT+1" workspace-default="Etc/GMT"></gux-time-zone-picker-beta>
  <label for="gux-form-field-input-i" slot="label">
    Select Time Zone
  </label>
</gux-form-field-time-zone-picker>
`;

exports[`gux-form-field-time-zone-picker #render input attributes should render component as expected (3) 1`] = `
<gux-form-field-time-zone-picker>
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Select Time Zone
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <slot name="label-info"></slot>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-time-zone-picker-container">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-time-zone-picker-beta id="gux-form-field-input-i" local-default="America/Detroit" required="" value="Etc/GMT+1" workspace-default="Etc/GMT"></gux-time-zone-picker-beta>
  <label for="gux-form-field-input-i" slot="label">
    Select Time Zone
  </label>
</gux-form-field-time-zone-picker>
`;

exports[`gux-form-field-time-zone-picker #render label-info should render component as expected 1`] = `
<gux-form-field-time-zone-picker>
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Select Time Zone This is some tooltip text
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <slot name="label-info"></slot>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-time-zone-picker-container">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-time-zone-picker-beta aria-describedby="gux-label-info-beta-i" id="gux-form-field-input-i" local-default="America/Detroit" value="Etc/GMT+1" workspace-default="Etc/GMT"></gux-time-zone-picker-beta>
  <label for="gux-form-field-input-i" slot="label">
    Select Time Zone
  </label>
  <gux-label-info-beta id="gux-label-info-beta-i" slot="label-info">
    <span slot="content">
      This is some tooltip text
    </span>
  </gux-label-info-beta>
</gux-form-field-time-zone-picker>
`;

exports[`gux-form-field-time-zone-picker #render label-position should render component as expected (1) 1`] = `
<gux-form-field-time-zone-picker>
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Select Time Zone
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <slot name="label-info"></slot>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-time-zone-picker-container">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-time-zone-picker-beta id="gux-form-field-input-i" local-default="America/Detroit" value="Etc/GMT+1" workspace-default="Etc/GMT"></gux-time-zone-picker-beta>
  <label for="gux-form-field-input-i" slot="label">
    Select Time Zone
  </label>
</gux-form-field-time-zone-picker>
`;

exports[`gux-form-field-time-zone-picker #render label-position should render component as expected (2) 1`] = `
<gux-form-field-time-zone-picker label-position="above">
  <template shadowrootmode="open">
    <fieldset class="gux-above gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Select Time Zone
      </legend>
      <div class="gux-above gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <slot name="label-info"></slot>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-time-zone-picker-container">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-time-zone-picker-beta id="gux-form-field-input-i" local-default="America/Detroit" value="Etc/GMT+1" workspace-default="Etc/GMT"></gux-time-zone-picker-beta>
  <label for="gux-form-field-input-i" slot="label">
    Select Time Zone
  </label>
</gux-form-field-time-zone-picker>
`;

exports[`gux-form-field-time-zone-picker #render label-position should render component as expected (3) 1`] = `
<gux-form-field-time-zone-picker label-position="beside">
  <template shadowrootmode="open">
    <fieldset class="gux-beside gux-form-field-fieldset-container">
      <legend class="gux-form-field-screenreader-label">
        Select Time Zone
      </legend>
      <div class="gux-beside gux-form-field-visual-label" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <slot name="label-info"></slot>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-time-zone-picker-container">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-time-zone-picker-beta id="gux-form-field-input-i" local-default="America/Detroit" value="Etc/GMT+1" workspace-default="Etc/GMT"></gux-time-zone-picker-beta>
  <label for="gux-form-field-input-i" slot="label">
    Select Time Zone
  </label>
</gux-form-field-time-zone-picker>
`;

exports[`gux-form-field-time-zone-picker #render label-position should render component as expected (4) 1`] = `
<gux-form-field-time-zone-picker label-position="screenreader">
  <template shadowrootmode="open">
    <fieldset class="gux-form-field-fieldset-container gux-screenreader">
      <legend class="gux-form-field-screenreader-label">
        Select Time Zone
      </legend>
      <div class="gux-form-field-visual-label gux-screenreader" role="presentation">
        <slot name="label"></slot>
        <gux-form-field-label-indicator variant="required"></gux-form-field-label-indicator>
        <slot name="label-info"></slot>
      </div>
      <slot name="label-info"></slot>
      <div class="gux-input-and-error-container">
        <div class="gux-input gux-time-zone-picker-container">
          <slot></slot>
        </div>
        <div class="gux-form-field-error">
          <gux-icon decorative="" icon-name="fa/hexagon-exclamation-solid"></gux-icon>
          <div class="gux-message">
            <slot name="error"></slot>
          </div>
        </div>
        <div class="gux-form-field-help">
          <div class="gux-message">
            <slot name="help"></slot>
          </div>
        </div>
      </div>
    </fieldset>
  </template>
  <gux-time-zone-picker-beta id="gux-form-field-input-i" local-default="America/Detroit" value="Etc/GMT+1" workspace-default="Etc/GMT"></gux-time-zone-picker-beta>
  <label for="gux-form-field-input-i" slot="label">
    Select Time Zone
  </label>
</gux-form-field-time-zone-picker>
`;
